# izipyzi

./: README.md  README.md.jinja  pyproject.toml
.copier/: .copier-answers.yaml
.github/workflows/: ci.yaml  release.yaml
tests/: test_stats.py  test_time.py
