[tool.poetry]
name = "pybox"
version = "0.1.0"
description = ""
authors = ["Armand Sauzay <sauzayarmand@gmail.com>"]
readme = "README.md"
packages = [{include = "pybox"}]

[tool.poetry.dependencies]
python = ">=3.10,<4"
numpy = ">=1.26.4"


[tool.poetry.group.test.dependencies]
pytest = ">=8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
